assets/section-why-duo.css
.why-duo__media{
    height: 0;
    position: relative;
}

.why-duo__media img{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    object-fit: cover;
}

.why-duo_wrapper{
    position: relative;
}

.contents-wrapper .left-content{
  width: 100%;
}

.template--collection .why-duo__media{
    padding-bottom: 47.5%!important;
}

.template--collection .why-duo_wrapper .contents-wrapper{
    padding: 0 100px;
}

@media (min-width: 1000px) {
    .why-duo_wrapper .contents-wrapper{
        padding: 0 93px;
    }

}

@media (max-width: 1150px) {
    .template--collection .why-duo_wrapper .contents-wrapper{
        padding: 0;
    }

    .template--collection .property-list_wrapper{
        padding: 35px 0 0;
    }

}

@media (min-width: 1250px) {
    .why-duo_wrapper .contents-wrapper{
        padding: 0 154px;
    }
}

@media (max-width: 920px) {
    .why-duo_wrapper .contents-wrapper{
        padding:0 37px;
    }

    .why-duo_wrapper .left-content__description p{
        margin-bottom: 37px;
    }

    .left-content__properties .property-list_wrapper{
        margin-bottom: 21px;
    }
}

@media(max-width: 800px){
  .why-duo_wrapper .contents-wrapper{
    padding:0 7px;
  }

  .right-content .property-list_wrapper{
    margin-bottom: 22px !important;
  }

  .why-duo_wrapper .left-content__description p{
    margin-bottom: 27px!important;
  }

  .left-content__properties .property-list_wrapper{
    margin-bottom: 21px!important;
  }
}

.header-content{
    flex-direction: column;
    gap: 0 !important;
    padding: 10px 0!important
}

.left-content__properties-wrapper{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: auto;
}

.why-duo_wrapper .left-content__heading{
    color: #000;
    font-family: "OldschoolGrotesk-Regular";
    font-size: 64px;
    font-style: normal;
    font-weight: 400;
    line-height: 56px;
    margin: 0 0 12px;
}

.template--collection .why-duo_wrapper .left-content__heading{
    font-size: 35px !important;
    line-height: 50px;
}

.why-duo_wrapper .left-content__description p{
    color: #000;
    font-family: "OldschoolGrotesk-Regular";
    font-size: 24px;
    font-style: normal;
    font-weight: 390;
    line-height: 32px;
    letter-spacing: -0.36px;
    margin: 0;
    max-width: 250px;
}

.property-list_wrapper{
    display: flex;
    gap: 20px;
    padding: 35px 0;
}

.left-content__properties .property-list_wrapper{
    margin-bottom: 61px;
}

.property-list_wrapper:nth-child(4){
    margin-left: 33px;
}

.property-list_wrapper:nth-child(7){
    margin-left: 33px;
}

.property-list_wrapper:nth-child(3){
    margin-left: 77px;
}

.property-list_wrapper:nth-child(6){
    margin-left: 77px;
}

.property-list_wrapper:nth-child(9){
    margin-left: 77px;
}

.property-list_wrapper:nth-child(9) .property-icon svg{
    width: 61px;
}

.property-description p{
    font-size: 16px;
    font-style: normal;
    line-height: 24px;
    letter-spacing: -.24px;
    margin: 0;
    font-family: 'OldschoolGrotesk-Regular';
    font-weight: 390;
}

.right-content .property-list_wrapper{
  justify-content: flex-end
}

.contents-wrapper{
    display: flex;
    justify-content: space-between;
    padding: 0 33px;
    position: absolute;
    top: 60px;
    width: 100%;
    height: auto;
}

@media (max-width: 1350px){
  .property-description p{
    font-size: 13px;
  }

  .property-description strong{
    font-size: 13px !important;
  }
}

@media (max-width: 1185px){
  .property-description p{
    font-size: 10px;
  }

  .why-duo_wrapper .left-content__heading{
    font-size: 54px;
  }

  .property-description strong{
    font-size: 10px !important;
  }
}


@media (max-width: 1100px){
  .right-content{
    right: 68px !important;
  }
}

@media (max-width: 1000px){
  .right-content{
    right: 38px !important;
  }
}



.property-description  strong{
    color: #000;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 24px;
    letter-spacing: -0.24px;
    font-family: "OldschoolGrotesk-Regular";
}

.property-description.enable_margin p{
    margin: 11px 0 0;
}


.right-content .property-list_wrapper:first-of-type .property-icon svg{
    width: 42px;
    height: auto;
}

.property-icon svg{
    width: 51px;
    height: auto;
}

.right-content__properties .property-list_wrapper:last-of-type .property-icon svg{
    width: 57px;
}

.right-content .property-list_wrapper{
    margin-bottom: 52px;
}

.right-content .right-content__properties .property-list_wrapper:last-of-type{
    margin: 0 0 0 81px;
}
@media (max-width: 1200px) {

    .why-duo__media{
        padding-bottom: 52%!important;
    }
}

@media (max-width: 1000px) {

    .why-duo__media{
        padding-bottom: 62%!important;
    }
}

@media (max-width: 890px) {
    .property-list_wrapper:nth-child(7){
        margin: 0;
    }

    .property-list_wrapper:nth-child(3){
        margin-left: 57px;
    }

    .property-list_wrapper:nth-child(6){
        margin-left: 57px;
    }

    .property-list_wrapper:nth-child(9){
        margin-left: 57px;
    }

    .property-list_wrapper:nth-child(4){
        margin: 0;
    }

    .template--collection .why-duo_wrapper .left-content__heading{
        font-size: 25px !important;
        line-height: 40px;
    }

    .property-list_wrapper{
        padding: 20px 0 0 !important;
    }

}

@media (max-width:767px) {
    .content-wrapper{
        margin-bottom: 11px;
        margin-left: 30px;
    }

    .property-list_wrapper{
        margin: 0 0 32px !important;
        padding: 0;
    }

    .property-list_wrapper{
        padding:0 !important;
    }

    .imagencontainerfinal{
        margin: 0!important;
    }

    .empty_content{
        margin: 0!important;
    }

    .property-list_wrapper:last-of-type{
        margin-bottom: 0;
    }

    .property-list_wrapper .property-description{
        width: calc( 100% - 52px );
    }

    .property-list_wrapper:nth-child(2){
        order: 3;
    }

    .property-list_wrapper:nth-child(3){
        order: 1;
    }

    .property-list_wrapper:nth-child(5){
        order: 4;
    }

    .property-list_wrapper:nth-child(6){
        order: 2;
    }

    .property-list_wrapper:nth-child(8){
        order: 5;
    }

    .only--mobile .content-wrapper{
        display: flex;
        flex-direction: column;
    }

    .why-duo-mobile__media img{
        width: 100%;
        height: auto;
        object-fit: contain;
        object-position: center;
    }

    .why-duo_wrapper{
        padding-right: 24px;
        padding-left: 24px;
    }

    .property-icon svg{
        width: 32px;
    }
    
    .content-wrapper .property-list_wrapper:nth-child(3) .property-icon svg{
        width: 28px;
    }

    .property-description.enable_margin p{
        margin: 0;
    }

    .why-duo_wrapper .left-content__heading{
        font-size: 48px;
        line-height: 48px;
        text-align: center;
        margin-bottom: 16px;
    }

    .why-duo_wrapper .content-container{
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .why-duo_wrapper .left-content__description p{
        font-size: 18px;
        line-height: 27px;
        text-align: center;
        margin-bottom: 36px;
        max-width: 100%;
        font-family: "OldschoolGrotesk-Regular";
    }

    .property-description strong{
        font-size: 12px;
        line-height: 16px;
        font-family: "OldschoolGrotesk-Regular";
    }

    .property-description p{
        font-size: 12px;
        line-height: 16px;
        font-family: "OldschoolGrotesk-Regular";
    }

}

